--- a/frontend/sachivalayam/home.html
+++ b/frontend/sachivalayam/home.html
@@ -32,17 +32,23 @@
         </div>
       </nav>
       <div class="sachivalayam-home-contents">
-          <ol>
-                <li>
-                    <a href="notifications.html">Notifications</a>
-                </li>
-                <li>
-                    <a href="farmers_details.html">Farmers Dashboard</a>
-                </li>
-                <li>
-                    <a href="newRegistration.html">New Registration</a>
-                </li>
-          </ol>
+        <div class="container text-center mt-5"></div>
+            <div class="row">
+                <div class="col">
+                    <a href="notifications.html" class="btn btn-success btn-lg mb-3">Notifications</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <a href="farmers_details.html" class="btn btn-success btn-lg mb-3">Farmers Dashboard</a>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <a href="newRegistration.html" class="btn btn-success btn-lg mb-3">New Registration</a>
+                </div>
+            </div>
+        </div>
       </div>
 </body>
 </html>
