--- a/frontend/sachivalayam/newRegistration.html
+++ b/frontend/sachivalayam/newRegistration.html
@@ -68,6 +68,13 @@
           <button onclick="" type="submit" class="btn btn-primary" id="register-button">Register</button>
         </div>
       </form>
+      <div class="fixed-bottom d-flex justify-content-end p-3">
+        <button onclick="history.back()" class="btn rounded-circle" style="background-color: #41a100; width: 50px; height: 50px; display: flex; justify-content: center; align-items: center;">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 16 16" fill="none" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M9 4 L5 8 L9 12" />
+            </svg>
+        </button>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
