--- a/frontend/contracts/sachivalayams.html
+++ b/frontend/contracts/sachivalayams.html
@@ -29,6 +29,30 @@
             </div>
         </div>
     </div>
+    <div class="container mt-4"></div>
+        <div class="header-container d-flex justify-content-between align-items-center">
+            <h1 class="heading-farmers">Sachivalayam Lists</h1>
+            <button class="btn btn-success" onclick="newRegistration()">+ New Registration</button>
+        </div>
+        <table class="table table-hover">
+            <thead>
+                <tr>
+                    <th>Sachivalayam Number</th>
+                    <th></th>
+                    <th>Crop Name</th>
+                    <th>Mobile Number</th>
+                    <th>Address</th>
+                </tr>
+            </thead>
+            <tbody id="farmerTableBody">
+            </tbody>
+        </table>
+    </div>
+    <script>
+        function newRegistration() {
+            window.location.href = '../sachivalayam/newRegistration.html';
+        }
+    </script>
       <script src="script.js"></script>
       <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
       
