--- a/frontend/contracts/sachivalayams.html
+++ b/frontend/contracts/sachivalayams.html
@@ -34,17 +34,17 @@
             <h1 class="heading-farmers">Sachivalayam Lists</h1>
             <button class="btn btn-success" onclick="newRegistration()">+ New Registration</button>
         </div>
-        <table class="table table-hover">
+        <table style="margin-left:15px; margin-right:50px" class="table table-hover">
             <thead>
                 <tr>
-                    <th>Sachivalayam Number</th>
-                    <th></th>
-                    <th>Crop Name</th>
-                    <th>Mobile Number</th>
-                    <th>Address</th>
+                    <th>State</th>
+                    <th>District</th>
+                    <th>Mandal</th>
+                    <th>Village</th>
+                    <th>Pincode</th>
                 </tr>
             </thead>
-            <tbody id="farmerTableBody">
+            <tbody id="sachivalayamtable">
             </tbody>
         </table>
     </div>
@@ -52,6 +52,55 @@
         function newRegistration() {
             window.location.href = '../sachivalayam/newRegistration.html';
         }
+        fetch('/frontend/sachivalayam/sachivalayams.json')
+            .then(response => response.json())
+            .then(data => {
+                const sachivalayams = data.sachivalayams;
+                displaySachivalayams(sachivalayams);
+            })
+            .catch(error => console.error('Error loading farmer data:', error));
+
+        // Function to display farmers in the table
+        function displaySachivalayams(sachivalayams) {
+            const tableBody = document.querySelector('#sachivalayamtable');
+
+            sachivalayams.forEach((sachivalayam, index) => {
+                let row = document.createElement('tr');
+                
+                // Make the entire row clickable
+                //row.setAttribute('onclick', `showFarmerDetails(${index})`);
+                
+                row.innerHTML = `
+                    <td>${sachivalayam.State}</td>
+                    <td>${sachivalayam.District}</td>
+                    <td>${sachivalayam.Mandal}</td>
+                    <td>${sachivalayam.Village}</td>
+                    <td>${sachivalayam.Pincode}</td>
+                `;
+
+                tableBody.appendChild(row);
+            });
+        }
+
+        // // Function to show farmer details in a modal/card
+        // function showFarmerDetails(index) {
+        //     fetch('/frontend/farmer.json')
+        //         .then(response => response.json())
+        //         .then(data => {
+        //             const farmer = data.farmers[index];
+        //             document.getElementById('farmerName').textContent = farmer.name;
+        //             document.getElementById('farmerAadhar').textContent = farmer["Aadhar Number"];
+        //             document.getElementById('farmerCrop').textContent = farmer["Crop Name"];
+        //             document.getElementById('farmerMobile').textContent = farmer["Mobile Number"];
+        //             document.getElementById('farmerAddress').textContent = farmer.Address;
+        //             document.getElementById('farmerContractor').textContent = farmer["Contractor Name"];
+        //             document.getElementById('farmerAcres').textContent = farmer.acres;
+        //             document.getElementById('farmerContractId').textContent = farmer.contract_ID;
+
+        //             // Show the modal
+        //             document.getElementById('farmerModal').style.display = 'flex';
+        //         });
+        // }
     </script>
       <script src="script.js"></script>
       <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
