--- a/frontend/contracts/sachivalayams.html
+++ b/frontend/contracts/sachivalayams.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="p-3 text-bg-dark d-flex">
-        <img class="logo-container" src="../sachivalayam/logo.jpg" alt="logo">
+        <img class="logo-container"src="../sachivalayam/logo.jpg" alt="logo">
           <div class="container-fluid header-container">
             <div class="d-flex flex-wrap align-items-center">
             </div>
@@ -32,7 +32,7 @@
     <div class="container mt-4"></div>
         <div class="header-container d-flex justify-content-between align-items-center">
             <h1 class="heading-farmers">Sachivalayam Lists</h1>
-            <button class="btn btn-success" onclick="newRegistration()">+ New Registration</button>
+            <button class="btn btn-success">+ New Registration</button>
         </div>
         <table style="margin-left:15px; margin-right:50px" class="table table-hover">
             <thead>
