--- a/frontend/sachivalayam/notifications.html
+++ b/frontend/sachivalayam/notifications.html
@@ -33,9 +33,53 @@
 
       <div class="container"></div>
         <h1>Notifications</h1>
-        <ul class="notifications-list">
-            <!-- Contract requests will be dynamically loaded here -->
+        <ul style="list-style: none;" class="notifications-list">
         </ul>
       </div>
+      <script>
+        async function loadNotifications() {
+            try {
+                const response = await fetch('http://localhost:3000/notifications');
+                if (!response.ok) throw new Error('Failed to fetch notifications');
+
+                const notifications = await response.json();
+
+                const notificationsList = document.querySelector('.notifications-list');
+                notificationsList.innerHTML = ''; // Clear existing notifications
+
+                if (notifications.length === 0) {
+                    notificationsList.innerHTML = '<li>No notifications available.</li>';
+                    return;
+                }
+
+                notifications.forEach(notification => {
+                    const notificationItem = document.createElement('li');
+                    notificationItem.classList.add('notification-item');
+                    notificationItem.dataset.contractId = notification.id; // Store the contract ID in the data attribute
+                    notificationItem.innerHTML = `
+                        <div class="notification-item-header">
+                            <div>
+                                <h6>${notification["Contractor Name"]} wants to connect to farmers</h6>
+                                <p>${notification.Address}</p>
+                            </div>
+                            <div style="margin-left:20px">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="green" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
+                                </svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="red" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
+                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293z"/>
+                                </svg>
+                            </div>
+                        </div>
+                    `;
+                    notificationItem.addEventListener('click', () => showContractDetails(notification.id)); // Add click event listener
+                    notificationsList.appendChild(notificationItem);
+                });
+            } catch (error) {
+                console.error('Error:', error.message);
+            }
+        }
+        document.addEventListener('DOMContentLoaded', loadNotifications);
+      </script>
 </body>
 </html>
