--- a/frontend/contracts/com_login.html
+++ b/frontend/contracts/com_login.html
@@ -31,12 +31,12 @@
                     </div>
                 </div>
                 <div id="contract-grid" class="grid"></div>
-                <div id="farmer-list" class="farmer-list"></div>
+                <!-- <div id="farmer-list" class="farmer-list"></div> -->
             </div>
         </div>
     </div>
+    <script src="con_fetch.js"></script>
     <script src="script.js"></script>
-    <!-- <script src="con_fetch.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
