--- a/frontend/contracts/sachivalayams.html
+++ b/frontend/contracts/sachivalayams.html
@@ -32,7 +32,6 @@
     <div class="container mt-4"></div>
         <div class="header-container d-flex justify-content-between align-items-center">
             <h1 class="heading-farmers">Sachivalayam Lists</h1>
-            <button class="btn btn-success">+ New Registration</button>
         </div>
         <table style="margin-left:15px; margin-right:50px" class="table table-hover">
             <thead>
@@ -42,6 +41,7 @@
                     <th>Mandal</th>
                     <th>Village</th>
                     <th>Pincode</th>
+                    <th>Crop</th>
                 </tr>
             </thead>
             <tbody id="sachivalayamtable">
