--- a/frontend/sachivalayam/notifications.html
+++ b/frontend/sachivalayam/notifications.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,43 +8,88 @@
     <link href="styles.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <a href="home.html">
-            <img class="logo-container" src="logo.jpg" alt="logo">
-        </a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <div class="ml-auto d-flex align-items-center">
-                <a href="notifications.html">
-                    <div class="notification-icon">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
-                            <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2M8 1.918l-.797.161A4 4 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4 4 0 0 0-3.203-3.92zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5 5 0 0 1 13 6c0 .88.32 4.2 1.22 6"/>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <div class="container-fluid">
+            <a href="home.html">
+                <img class="logo-container" src="logo.jpg" alt="logo">
+            </a>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <div class="ml-auto d-flex align-items-center">
+                    <a href="notifications.html" class="notification-link">
+                        <div class="d-flex align-items-center">
+                            <!-- Translation Icon -->
+                            <div class="translation-icon mr-4">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-translate" viewBox="0 0 16 16">
+                                    <path d="M4.545 6.714 4.11 8H3l1.862-5h1.284L8 8H6.833l-.435-1.286zm1.634-.736L5.5 3.956h-.049l-.679 2.022z"/>
+                                    <path d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zm7.138 9.995q.289.451.63.846c-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6 6 0 0 1-.415-.492 2 2 0 0 1-.94.31"/>
+                                  </svg>
+                            </div>
+                            <!-- Notifications Icon -->
+                            <div class="notification-icon mr-2">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
+                                    <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2M8 1.918l-.797.161A4 4 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4 4 0 0 0-3.203-3.92zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5 5 0 0 1 13 6c0 .88.32 4.2 1.22 6"/>
+                                </svg>
+                            </div>
+                        </div>
+                    </a>
+                    <div class="profile-icon ml-3">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
                         </svg>
                     </div>
-                </a>
-                <div class="profile-icon ml-3">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-                        <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
-                        <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
-                    </svg>
                 </div>
             </div>
         </div>
     </nav>
+    
 
-      <div class="container"></div>
+    <div class="notifications">
         <h1>Notifications</h1>
-        <ul style="list-style: none;" class="notifications-list">
-        </ul>
-      </div>
-      <script>
+        <ul class="notifications-list" style="list-style: none;"></ul>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="notificationModal" tabindex="-1" role="dialog" aria-labelledby="notificationModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="notificationModalLabel">Contract Details</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <div class="card">
+                        <div class="card-body">
+                            <p class="card-text"><b>Name: </b><span id="contractorName"></span></p>
+                            <p class="card-text"><b>Address: </b><span id="contractAddress"></span></p>
+                            <p class="card-text"><b>Mobile Number: </b><span id="contractMobileNumber"></span></p>
+                            <p class="card-text"><b>Requirements: </b><span id="contractRequirements"></span></p>
+                            <p class="card-text"><b>Quantity: </b><span id="contractQuantity"></span></p>
+                            <div class="mt-3">
+                                <button id="acceptContract" class="btn btn-success">Accept</button>
+                                <button id="rejectContract" class="btn btn-danger">Reject</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script>
         async function loadNotifications() {
             try {
                 const response = await fetch('http://localhost:3000/notifications');
                 if (!response.ok) throw new Error('Failed to fetch notifications');
 
                 const notifications = await response.json();
-
                 const notificationsList = document.querySelector('.notifications-list');
                 notificationsList.innerHTML = ''; // Clear existing notifications
 
@@ -55,14 +101,15 @@
                 notifications.forEach(notification => {
                     const notificationItem = document.createElement('li');
                     notificationItem.classList.add('notification-item');
-                    notificationItem.dataset.contractId = notification.id; // Store the contract ID in the data attribute
+                    notificationItem.dataset.contractId = notification.id; // Store contract ID in data attribute
+
                     notificationItem.innerHTML = `
                         <div class="notification-item-header">
                             <div>
                                 <h6>${notification["Contractor Name"]} wants to connect to farmers</h6>
                                 <p>${notification.Address}</p>
                             </div>
-                            <div style="margin-left:20px">
+                            <div style="margin-left: 20px;">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="green" class="bi bi-check-circle-fill" viewBox="0 0 16 16">
                                     <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0m-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z"/>
                                 </svg>
@@ -72,14 +119,56 @@
                             </div>
                         </div>
                     `;
-                    notificationItem.addEventListener('click', () => showContractDetails(notification.id)); // Add click event listener
+
+                    notificationItem.addEventListener('click', () => showContractDetails(notification)); // Add click event listener
                     notificationsList.appendChild(notificationItem);
                 });
             } catch (error) {
                 console.error('Error:', error.message);
             }
         }
+
+        function showContractDetails(notification) {
+            document.getElementById('contractorName').innerText = notification["Contractor Name"];
+            document.getElementById('contractAddress').innerText = notification.Address;
+            document.getElementById('contractMobileNumber').innerText = notification["Mobile Number"];
+            document.getElementById('contractRequirements').innerText = notification.Requirements;
+            document.getElementById('contractQuantity').innerText = notification.Quantity;
+            $('#notificationModal').modal('show');
+        }
+
+        document.getElementById('acceptContract').addEventListener('click', async () => {
+            const contractId = document.querySelector('.notification-item-header').dataset.contractId;
+            try {
+                const response = await fetch(`http://localhost:3000/notifications/${contractId}/accept`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                });
+                if (!response.ok) throw new Error('Failed to accept contract');
+                console.log('Contract Accepted');
+                $('#notificationModal').modal('hide');
+            } catch (error) {
+                console.error('Error:', error.message);
+            }
+        });
+
+        document.getElementById('rejectContract').addEventListener('click', async () => {
+            const contractId = document.querySelector('.notification-item-header').dataset.contractId;
+            try {
+                const response = await fetch(`http://localhost:3000/notifications/${contractId}/reject`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                });
+                if (!response.ok) throw new Error('Failed to reject contract');
+                console.log('Contract Rejected');
+                $('#notificationModal').modal('hide');
+            } catch (error) {
+                console.error('Error:', error.message);
+            }
+        });
+
         document.addEventListener('DOMContentLoaded', loadNotifications);
-      </script>
+    </script>
 </body>
+
 </html>
