--- a/frontend/contracts/notifications.html
+++ b/frontend/contracts/notifications.html
@@ -6,6 +6,14 @@
     <title>Notifications</title>
     <link href="styles.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        .navbar {
+            background-color: #212529;
+            padding: 15px;
+            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+            height: 65px; /* Adjust based on logo height */
+        }
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
