--- a/frontend/contracts/farmers.html
+++ b/frontend/contracts/farmers.html
@@ -15,11 +15,12 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            border: 1px solid #ddd;
+            border: 1px solid #222020;
             border-radius: 8px;
             padding: 15px;
-            margin: 10px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin-left: 100px;
+            margin-top:20px;
+            box-shadow: 0 2px 4px rgba(185, 23, 23, 0.1);
             background-color: #fff;
             max-width: 300px;
         }
@@ -28,7 +29,7 @@
             color: #333;
         }
         .p-3, .text-bg-dark {
-            background-color: green !important;
+            background-color: rgb(11, 11, 11) !important;
             margin: 0;
         }
         .header-container {
@@ -55,7 +56,7 @@
     </style>
 </head>
 <body>
-    <header class="p-3 text-bg-dark d-flex">
+    <!-- <header class="p-3 text-bg-dark d-flex">
         <div class="container-fluid header-container">
             <div class="d-flex flex-wrap align-items-center"></div>
             <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
@@ -63,30 +64,50 @@
                 <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
             </svg>
         </div>
-    </header>
+    </header> -->
     <div class="container-fluid mt-2" id="farmers-container"></div>
     <script>
-        // Function to display farmer data
-        function displayFarmers() {
+       document.addEventListener('DOMContentLoaded', async function() {
+            // Get the contractId from the URL query parameters
+            const urlParams = new URLSearchParams(window.location.search);
+            const contractId = urlParams.get('contractId');
+
+            if (contractId) {
+                try {
+                    const response = await fetch(`http://localhost:3000/contracts/${contractId}`);
+                    if (!response.ok) throw new Error('Error fetching farmers');
+                    const farmers = await response.json();
+                    
+                    // Function to display the farmers data
+                    displayFarmers(farmers);
+                } catch (error) {
+                    console.error('Error fetching farmers:', error);
+                }
+            } else {
+                console.error('No contractId found in the URL');
+            }
+        });
+
+        function displayFarmers(farmers) {
             const farmersContainer = document.getElementById('farmers-container');
-            const farmersData = JSON.parse(localStorage.getItem('farmersData')) || [];
-            
-            if (farmersData.length === 0) {
+            farmersContainer.innerHTML = ''; // Clear any existing content
+
+            if (farmers.length === 0) {
                 farmersContainer.innerHTML = '<p>No farmers found for this contract.</p>';
             } else {
-                farmersData.forEach(farmer => {
-                    farmersContainer.innerHTML += `
-                        <div class="farmer-card">
-                            <div class="farmer-info">
-                                <div>Farmer ID: ${farmer["Aadhar Number"]}</div>
-                                <div>Name: ${farmer.name}</div>
-                            </div>
+                farmers.forEach(farmer => {
+                    const farmerCard = document.createElement('div');
+                    farmerCard.className = 'farmer-card';
+                    farmerCard.innerHTML = `
+                        <div class="farmer-info">
+                            <div>Farmer ID: ${farmer["Aadhar Number"]}</div>
+                            <div>Name: ${farmer.name}</div>
                         </div>
                     `;
+                    farmersContainer.appendChild(farmerCard);
                 });
             }
         }
-        window.onload = displayFarmers;
     </script>
 </body>
 </html>
