--- a/frontend/contracts/com_login.html
+++ b/frontend/contracts/com_login.html
@@ -56,7 +56,7 @@
                         </button>
                     </div>
                 </div>
-                <h1 style="text-align:center;margin-top:30px;color:rgb(4, 93, 4)">Available Contracts</h1>
+                <h1 style="text-align:center;margin-top:30px;color:rgb(4, 93, 4)">Active Contracts</h1>
                 <div id="contract-grid" class="grid"></div>
             </div>
         </div>
