--- a/frontend/contracts/farmers.html
+++ b/frontend/contracts/farmers.html
@@ -19,10 +19,11 @@
             border-radius: 8px;
             padding: 15px;
             margin-left: 100px;
-            margin-top:20px;
+            margin-top: 20px;
             box-shadow: 0 2px 4px rgba(185, 23, 23, 0.1);
             background-color: #fff;
             max-width: 300px;
+            cursor: pointer;
         }
         .farmer-info {
             font-size: 14px;
@@ -54,35 +55,77 @@
             flex: 1;
         }
         .page-background::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-image: url(../sachivalayam/homebg.jpg);
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        opacity: 0.8; /* Adjust the opacity as needed */
-        z-index: -1; /* Ensure the pseudo-element is behind the content */
-    }
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url(../sachivalayam/homebg.jpg);
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            opacity: 0.8;
+            z-index: -1;
+        }
+        /* Modal Styling */
+        .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
+        .card {
+            background-color: white;
+            border-radius: 8px;
+            padding: 20px;
+            max-width: 400px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+        }
+        .close {
+            position: absolute;
+            top: 10px;
+            right: 15px;
+            font-size: 24px;
+            cursor: pointer;
+        }
+        .modal-content {
+            position: relative;
+        }
     </style>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body class="page-background">
-    <!-- <header class="p-3 text-bg-dark d-flex">
-        <div class="container-fluid header-container">
-            <div class="d-flex flex-wrap align-items-center"></div>
-            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
-                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
-            </svg>
-        </div>
-    </header> -->
     <div class="container-fluid mt-2" id="farmers-container"></div>
+
+    <!-- Modal for displaying farmer details -->
+    <div id="farmerModal" class="modal">
+        <div class="card modal-content">
+            <span class="close" onclick="closeModal()">x</span>
+            <h2 id="farmerName"></h2>
+            <p><strong>Aadhar Number:</strong> <span id="farmerAadhar"></span></p>
+            <p><strong>Mobile Number:</strong> <span id="farmerMobile"></span></p>
+            <p><strong>Crop Name:</strong> <span id="farmerCrop"></span></p>
+            <p><strong>Address:</strong> <span id="farmerAddress"></span></p>
+            <p><strong>Acres:</strong> <span id="farmerAcres"></span></p>
+            <div style="display: flex; gap: 10px;">
+                <button type="button" class="btn btn-primary" data-toggle="button" aria-pressed="false" autocomplete="off" onclick="viewStatus()" style="background-color: green;">
+                    View Status
+                  </button>
+            </div>
+        </div>
+    </div>
+
     <script>
-       document.addEventListener('DOMContentLoaded', async function() {
-            // Get the contractId from the URL query parameters
+        let farmersData = [];
+
+        document.addEventListener('DOMContentLoaded', async function() {
             const urlParams = new URLSearchParams(window.location.search);
             const contractId = urlParams.get('contractId');
 
@@ -90,10 +133,10 @@
                 try {
                     const response = await fetch(`http://localhost:3000/contracts/${contractId}`);
                     if (!response.ok) throw new Error('Error fetching farmers');
-                    const farmers = await response.json();
+                    farmersData = await response.json();
                     
                     // Function to display the farmers data
-                    displayFarmers(farmers);
+                    displayFarmers(farmersData);
                 } catch (error) {
                     console.error('Error fetching farmers:', error);
                 }
@@ -109,7 +152,7 @@
             if (farmers.length === 0) {
                 farmersContainer.innerHTML = '<p>No farmers found for this contract.</p>';
             } else {
-                farmers.forEach(farmer => {
+                farmers.forEach((farmer, index) => {
                     const farmerCard = document.createElement('div');
                     farmerCard.className = 'farmer-card';
                     farmerCard.innerHTML = `
@@ -118,9 +161,28 @@
                             <div>Name: ${farmer.name}</div>
                         </div>
                     `;
+                    farmerCard.onclick = () => showFarmerDetails(index);
                     farmersContainer.appendChild(farmerCard);
                 });
             }
+        }
+
+        function showFarmerDetails(index) {
+            const farmer = farmersData[index];
+            document.getElementById('farmerName').textContent = farmer.name;
+            document.getElementById('farmerAadhar').textContent = farmer["Aadhar Number"];
+            document.getElementById('farmerCrop').textContent = farmer["Crop Name"];
+            document.getElementById('farmerMobile').textContent = farmer["Mobile Number"];
+            document.getElementById('farmerAddress').textContent = farmer.Address;
+            document.getElementById('farmerAcres').textContent = farmer.acres;
+
+            // Show the modal
+            document.getElementById('farmerModal').style.display = 'flex';
+        }
+
+        // Function to close the modal
+        function closeModal() {
+            document.getElementById('farmerModal').style.display = 'none';
         }
     </script>
 </body>
