--- a/frontend/sachivalayam/farmers_details.html
+++ b/frontend/sachivalayam/farmers_details.html
@@ -7,7 +7,7 @@
     <link href="styles.css" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="farmers-dashboard">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
             <a href="home.html">
@@ -77,9 +77,7 @@
             <p><strong>Mobile Number:</strong> <span id="farmerMobile"></span></p>
             <p><strong>Crop Name:</strong> <span id="farmerCrop"></span></p>
             <p><strong>Address:</strong> <span id="farmerAddress"></span></p>
-            <p><strong>Contractor Name:</strong> <span id="farmerContractor"></span></p>
             <p><strong>Acres:</strong> <span id="farmerAcres"></span></p>
-            <p><strong>Contract ID:</strong> <span id="farmerContractId"></span></p>
             <div style="display: flex; gap: 10px;">
                 <button style="border-radius: 5px; border: 1px solid #ccc;" onclick="editFarmer()">Edit</button>
                 <button style="border-radius: 5px; border: 1px solid #ccc;" onclick="deleteFarmer()">Delete</button>
@@ -133,9 +131,7 @@
                     document.getElementById('farmerCrop').textContent = farmer["Crop Name"];
                     document.getElementById('farmerMobile').textContent = farmer["Mobile Number"];
                     document.getElementById('farmerAddress').textContent = farmer.Address;
-                    document.getElementById('farmerContractor').textContent = farmer["Contractor Name"];
                     document.getElementById('farmerAcres').textContent = farmer.acres;
-                    document.getElementById('farmerContractId').textContent = farmer.contract_ID;
 
                     // Show the modal
                     document.getElementById('farmerModal').style.display = 'flex';
