--- a/frontend/contracts/sachivalayams.html
+++ b/frontend/contracts/sachivalayams.html
@@ -61,8 +61,8 @@
                     <th>District</th>
                     <th>Mandal</th>
                     <th>Village</th>
-                    <th>Pincode</th>
                     <th>Crop</th>
+                    <th>No. of acres</th>
                 </tr>
             </thead>
             <tbody id="sachivalayamtable">
