--- a/frontend/login.html
+++ b/frontend/login.html
@@ -54,9 +54,10 @@
     <video autoplay muted loop class="video-background" playbackRate="0.75">
         <source src="bg-video.mp4" type="video/mp4">
     </video>
-    <div class="login-container">
-        <h2>Welcome to Viswaas Bandhan!</h2>
-        <h2>Login to your account</h2>
+    <div class="login-container" style="width: 50%;">
+        <h2 style="text-align: center;">Welcome to</h2>
+        <h2 style="text-align: center; margin-bottom: 10%;">Viswaas Bandhan!</h2>
+        <h4 style="text-align: center; margin-bottom: 5%;">Login to your account</h4>
         <form>
             <div class="mb-3">
                 <input type="text" class="form-control" id="inputEmail" placeholder="Your username or email">
