--- a/frontend/contracts/notifications.html
+++ b/frontend/contracts/notifications.html
@@ -21,7 +21,7 @@
             <a href="com_login.html">
                 <img class="logo-container" src="logo.jpg" alt="logo">
             </a>
-           
+            <h6 style="color: white">VISWAAS BANDHAN</h6>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 
                 <div class="ml-auto d-flex align-items-center">
