--- a/frontend/sachivalayam/home.html
+++ b/frontend/sachivalayam/home.html
@@ -13,6 +13,7 @@
             <a href="home.html">
                 <img class="logo-container" src="logo.jpg" alt="logo">
             </a>
+            <h6 style="color: white">VISWAAS BANDHAN</h6>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <div class="ml-auto d-flex align-items-center">
                     <!-- Translation Icon -->
@@ -51,8 +52,8 @@
 
     <div class="sachivalayam-home-contents">
         <div class="container mt-5 pt-5">
-            <h1 class="text-center display-4 mb-4">Welcome to Sachivalayam</h1>
-            <p class="lead text-center mb-5">Your one-stop portal for all services</p>
+            <h1 class="text-center display-4 mb-4">Welcome to Viswaas Bandhan</h1>
+            <p class="lead text-center mb-5">Your one-stop portal for all farming services</p>
             <div class="row text-center">
                 <div class="col-lg-4 col-md-6 mb-4">
                     <a href="notifications.html" class="btn btn-primary btn-lg btn-block rounded-pill shadow">Notifications</a>
