--- a/frontend/sachivalayam/farmers_details.html
+++ b/frontend/sachivalayam/farmers_details.html
@@ -13,6 +13,7 @@
             <a href="home.html">
                 <img class="logo-container" src="logo.jpg" alt="logo">
             </a>
+            <h6 style="color: white">VISWAAS BANDHAN</h6>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <div class="ml-auto d-flex align-items-center">
                     <!-- Translation Icon -->
