--- a/frontend/sachivalayam/newRegistration.html
+++ b/frontend/sachivalayam/newRegistration.html
@@ -10,7 +10,7 @@
 <body class="registration-page">
     <form class="row g-3" id="farmer-registration-form">
         <div class="heading">
-            <h1 class="display-5">Registration</h1>
+            <h1 class="display-5" style="color:#0a6e31;"><b>Registration</b></h1>
         </div>
         <div class="col-12">
             <label for="inputName" class="form-label">Name</label>
