--- a/frontend/sachivalayam/notifications.html
+++ b/frontend/sachivalayam/notifications.html
@@ -53,7 +53,7 @@
     </nav>
     
 
-    <div class="notifications">
+    <div style="margin-top:60px;" class="notifications">
         <h1>Notifications</h1>
         <ul class="notifications-list" style="list-style: none;"></ul>
     </div>
