--- a/frontend/sachivalayam/home_hindi.html
+++ b/frontend/sachivalayam/home_hindi.html
@@ -50,7 +50,7 @@
         </div>
     </nav>
 
-    <div class="sachivalayam-home-contents">
+    <div style="margin-top:20px;" class="sachivalayam-home-contents">
         <div class="container mt-5 pt-5">
             <h1 class="text-center display-4 mb-4">विस्वास बंधन</h1>
             <p class="lead text-center mb-5">सभी कृषि सेवाओं के लिए आपका वन-स्टॉप पोर्टल</p>
