--- a/frontend/sachivalayam/home_telugu.html
+++ b/frontend/sachivalayam/home_telugu.html
@@ -50,7 +50,7 @@
         </div>
     </nav>
 
-    <div class="sachivalayam-home-contents">
+    <div style="margin-top:20px;" class="sachivalayam-home-contents">
         <div class="container mt-5 pt-5">
             <h1 class="text-center display-4 mb-4">విశ్వాస్ బందన్</h1>
             <p class="lead text-center mb-5">అన్ని వ్యవసాయ సేవలకు మీ వన్-స్టాప్ పోర్టల్</p>
