--- a/frontend/sachivalayam/farmers_details.html
+++ b/frontend/sachivalayam/farmers_details.html
@@ -24,7 +24,7 @@
                           </svg>
                           <ul class="language-list">
                             <li id="hindi">Hindi</li>
-                            <li>Tamil</li>
+                            <li id="english">English</li>
                             <li id="telugu">Telugu</li>
                           </ul>
                     </div>
