--- a/frontend/sachivalayam/home.html
+++ b/frontend/sachivalayam/home.html
@@ -24,7 +24,7 @@
                           </svg>
                           <ul class="language-list">
                             <li onclick="location.href='home_hindi.html'">Hindi</li>
-                            <li>Tamil</li>
+                            <li id="english">English</li>
                             <li onclick="location.href='home_telugu.html'">Telugu</li>
                           </ul>
                     </div>
