--- a/frontend/sachivalayam/home_hindi.html
+++ b/frontend/sachivalayam/home_hindi.html
@@ -23,9 +23,9 @@
                             <path d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zm7.138 9.995q.289.451.63.846c-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6 6 0 0 1-.415-.492 2 2 0 0 1-.94.31"/>
                           </svg>
                           <ul class="language-list">
-                            <li>हिंदी</li>
-                            <li>तमिल</li>
-                            <li>तेलुगु</li>
+                            <li id="hindi">हिंदी</li>
+                            <li id="english">अंग्रेज़ी</li>
+                            <li id="telugu">तेलुगु</li>
                           </ul>
                     </div>
                     <a href="notifications.html" class="notification-link">
@@ -52,17 +52,17 @@
 
     <div style="margin-top:20px;" class="sachivalayam-home-contents">
         <div class="container mt-5 pt-5">
-            <h1 class="text-center display-4 mb-4">विस्वास बंधन</h1>
+            <h1 style="padding-top:80px" class="text-center display-4 mb-4">विस्वास बंधन</h1>
             <p class="lead text-center mb-5">सभी कृषि सेवाओं के लिए आपका वन-स्टॉप पोर्टल</p>
             <div class="row text-center">
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <a href="notifications.html" class="btn btn-primary btn-lg btn-block rounded-pill shadow">अधिसूचना</a>
+                    <a href="farmers_details.html" class="btn btn-primary btn-lg btn-block rounded-pill shadow">किसानों की सूची</a>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <a href="farmers_details.html" class="btn btn-success btn-lg btn-block rounded-pill shadow">किसानों की सूची</a>
+                    <a href="newRegistration.html" class="btn btn-success btn-lg btn-block rounded-pill shadow">नया पंजीकरण</a>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
-                    <a href="newRegistration.html" class="btn btn-warning btn-lg btn-block rounded-pill shadow">नया पंजीकरण</a>
+                    <a href="" class="btn btn-warning btn-lg btn-block rounded-pill shadow">समझौता पत्र</a>
                 </div>
             </div>
         </div>
