--- a/frontend/sachivalayam/home_telugu.html
+++ b/frontend/sachivalayam/home_telugu.html
@@ -56,13 +56,13 @@
             <p class="lead text-center mb-5">అన్ని వ్యవసాయ సేవలకు మీ వన్-స్టాప్ పోర్టల్</p>
             <div class="row text-center">
                 <div class="col-lg-4 col-md-6 mb-4">
+                    <a href="agreement_form.html" class="btn btn-warning btn-lg btn-block rounded-pill shadow">ఒప్పంద పత్రం</a>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
                     <a href="farmers_details.html" class="btn btn-primary btn-lg btn-block rounded-pill shadow">రైతుల వివరాలు</a>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <a href="newRegistration.html" class="btn btn-success btn-lg btn-block rounded-pill shadow">కొత్త నమోదు</a>
-                </div>
-                <div class="col-lg-4 col-md-6 mb-4">
-                    <a href="" class="btn btn-warning btn-lg btn-block rounded-pill shadow">ఒప్పంద పత్రం</a>
+                <div class="col-lg-4 col-md-6 mb-4"></div>
+                <a href="newRegistration.html" class="btn btn-success btn-lg btn-block rounded-pill shadow">కొత్త నమోదు</a>
                 </div>
             </div>
         </div>
